--- a/css/style.css
+++ b/css/style.css
@@ -24,69 +24,108 @@
     transform: translateY(50px);
   }
   to {
-    opacity: 1; transform:translateY(0px);
+    opacity: 1;
+    transform: translateY(0px);
   }
 }
 
 /* Partials */
 /* colors */
 /* font family */
-* {box-sizing: border-box;}
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  --base-text-color: #373d3f;
+  --base-bg-color: #eeeeee;
+  --base-bg-color-white: #ffffff;
+  --link-main: #f0932b;
+  --link-hover: #0088d4;
+  --form-black: #333333;
+  --transition-text: 0.2s;
+  --transition-bg: 0.15s;
+}
+
 html {
   font-size: 10px;
-  background: #F1F5F8;
-  color: #373D3F;
   padding: 0;
   margin: 0;
-text-rendering: optimizeLegibility;}
+  text-rendering: optimizeLegibility;
+}
 
 body {
   margin: 0;
-  font-family: "Quicksand", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  background-color: #eeeeee;
+  font-family: "Quicksand", "Helvetica Neue Light", "Helvetica Neue", Helvetica,
+    Arial, "Lucida Grande", sans-serif;
   font-size: 1.8rem;
   line-height: 1.566;
   font-weight: 600;
   padding-bottom: 10vh;
- }
+  transition: background-color var(--transition-bg) ease;
+  background-color: var(--base-bg-color);
+  color: var(--base-text-color);
+}
 
-  h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 400;
-  }
+body.dark-mode {
+  --base-bg-color: #373d3f;
+  --base-text-color: #eeeeee;
+  --base-bg-color-white: #333;
+}
 
-h1, .h1 {
-  font-size: 3.8rem; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+}
 
-h2, .h2 {
-  font-size: 3.4rem; }
+h1,
+.h1 {
+  font-size: 3.8rem;
+}
 
-h3, .h3 {
-  font-size: 2.8rem; }
+h2,
+.h2 {
+  font-size: 3.4rem;
+}
 
-  h4, .h4 {
-    font-size: 2.4rem; }
+h3,
+.h3 {
+  font-size: 2.8rem;
+}
+
+h4,
+.h4 {
+  font-size: 2.4rem;
+}
 
 a {
   cursor: pointer;
   text-decoration: none;
-  color: #f0932b;
+  color: var(--link-main);
   font-weight: 600;
-  transition: 0.3s color ease; }
-  a:hover {  color: #0088d4; }
-
-a.underlined {
-    border-bottom: 4px solid;
+  transition: var(--transition-text) color ease;
+}
+a:hover {
+  color: var(--link-hover);
 }
 
-    .magenta { color: #527AC2;}
+a.underlined {
+  border-bottom: 4px solid;
+}
 
-
-
-.is-kyle {
-  background: -webkit-linear-gradient(bottom right, #0088d4, #0375B4); }
-
-#first-section, .section {
+#first-section,
+.section {
   max-width: 830px;
   padding-left: 15px;
   padding-right: 15px;
@@ -112,39 +151,26 @@ a.underlined {
 
 .section-header {
   font-size: calc(10px + 1.5vmax);
-  border-bottom: 3px solid #333333;
   width: fit-content;
 }
-
-.kyleButton {
-  padding: 15px 30px;
-  border: 1px dashed #fefefe;
-  background-color: #333;
-  transition: 0.3s all ease;
-  margin-top: 20px;
-  box-shadow: 0 0 0 5px #333; }
-  .kyleButton :hover {
-    background-color: #222;
-    box-shadow: 0 0 0 5px #222; }
-
 
 /* === First section === */
 
 .first-section-title {
   font-size: 8vmax;
-font-weight: 800;
-letter-spacing: -4px;
-background-image: -webkit-linear-gradient(92deg,red,yellow);
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
--webkit-animation: hue 10s infinite linear;
-margin-bottom: 10px;
-    line-height: 1;
-    margin-top: calc(3vmin + 50px);
- }
+  font-weight: 800;
+  letter-spacing: -4px;
+  background-image: -webkit-linear-gradient(92deg, red, yellow);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: hue 10s infinite linear;
+  margin-bottom: 10px;
+  line-height: 1;
+  margin-top: calc(3vmin + 50px);
+}
 
 .first-section-subtitle {
-  color: #060606;
+  color: var(--base-text-color);
   font-size: calc(10px + 1.5vmax);
   font-weight: 400;
   margin-top: 0;
@@ -153,23 +179,22 @@ margin-bottom: 10px;
 
 #first-section .short-seperator {
   display: block;
-width: 80px;
-border-bottom: 3px solid #030303;
-margin-bottom: 13px;
+  width: 80px;
+  border-bottom: 3px solid var(--base-text-color);
+  margin-bottom: 13px;
 }
 
 #first-section .links {
   font-size: calc(10px + 1.3vmax);
-    font-weight: 700;
-        font-family: 'Raleway', sans-serif;
-margin-bottom: 50px;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  margin-bottom: 50px;
 }
 
 #first-section .links span {
   margin: 0 10px;
-    font-weight: 600;
+  font-weight: 600;
 }
-
 
 /* ----- intro section ----- */
 
@@ -187,25 +212,62 @@ margin-bottom: 50px;
   font-size: 2.5rem;
 } */
 
-
 /* ----  work section ---- */
 
-#work h2 { font-weight: 400; }
-#work h3 { font-size: 2.6rem; }
+#work h2 {
+  font-weight: 400;
+}
+#work h3 {
+  font-size: 2.6rem;
+}
 
-.work-inner-section { padding: 30px 3vw; background: white; margin-bottom:30px; box-shadow: 3px 3px 0px 0px #f0932b; }
+.work-inner-section {
+  padding: 30px 3vw;
+  background: var(--base-bg-color-white);
+  margin-bottom: 30px;
+  box-shadow: 3px 3px 0px 0px var(--link-main);
+}
 .work-inner-section-header {
   display: grid;
-  grid-template-areas: 
-  'logo name'
-  'logo date';
+  grid-template-areas:
+    "logo name"
+    "logo date";
   align-items: flex-start;
+  justify-content: flex-start;
   max-width: 400px;
 }
-p.work-inner-strapline {  font-size: 120%; }
-.work-inner-section-header img, .work-inner-section-header svg { grid-area: logo; max-height: 95px; margin-right: 16px; }
-.work-inner-section-header h2 { grid-area: name; margin: 0;}
-.work-inner-section-header .work-section-date { grid-area: date; margin: 0;}
+p.work-inner-strapline {
+  font-size: 120%;
+}
+.work-inner-section-header img,
+.work-inner-section-header svg {
+  grid-area: logo;
+  max-height: 95px;
+  margin-right: 16px;
+  min-width: 83px;
+}
+.work-inner-section-header h2 {
+  grid-area: name;
+  margin: 0;
+}
+.work-inner-section-header .work-section-date {
+  grid-area: date;
+  margin: 0;
+}
+
+/* twc specific edits */
+
+.work-inner-section#twc .work-inner-section-header {
+  grid-template-areas: "logo" "name" "date";
+}
+
+.work-inner-section#twc .work-inner-section-header svg {
+  background-color: white;
+}
+
+.work-inner-section#twc h2 {
+  margin-top: 16px;
+}
 
 .site-examples {
   display: grid;
@@ -214,34 +276,61 @@ p.work-inner-strapline {  font-size: 120%; }
 }
 
 /* contact */
-#contact { margin-bottom: 30px; }
-#contact > div { 
+#contact {
+  margin-bottom: 30px;
+}
+#contact > div {
   margin: 0 auto;
 }
 form {
   width: 100%;
-  background: white;
+  background: var(--base-bg-color-white);
   padding: 30px 3vw;
   max-width: max-content;
   margin: 0 auto;
 }
-form * { display: block; }
-form input, form textarea {
+form * {
+  display: block;
+}
+form input,
+form textarea {
   margin-top: 6px;
   font-size: 20px;
   padding: 3px 0 3px 8px;
   border-radius: 3px;
-  border: 2px solid #333333;
+  border: 2px solid var(--form-black);
 }
-form label { margin-bottom: 16px;}
-form input[type=submit] {
+form label {
+  margin-bottom: 16px;
+}
+form input[type="submit"] {
   font-size: 20px;
-  background: orange;
+  background: var(--link-main);
   border: 0;
-  padding: 4px 20px;
+  padding: 8px 20px;
+  width: 100%;
+  color: white;
 }
 @media (max-width: 768px) {
   .section {
     min-height: 30vmax;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    font-size: 1.4rem;
+  }
+
+  #work h3 {
+    font-size: 1.8rem;
+  }
+
+  .work-inner-section ul {
+    padding-left: 1.6rem;
+  }
+
+  .site-examples {
+    grid-gap: 12px;
   }
 }
