aromatherapy associates work added, style changes, fix to contact form

--- a/css/core.css
+++ b/css/core.css
@@ -7,7 +7,7 @@
   --base-bg-color: #eeeeee;
   --base-bg-color-white: #ffffff;
   --link-main: #f0932b;
-  --link-hover: #0088d4;
+  --link-hover: #f1b672;
   --form-black: #333333;
   --transition-text: 0.2s;
   --transition-bg: 0.15s;
