--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,15 @@
   font-weight: 600;
 }
 
+#first-section .first-section-anchor {
+  margin-right: 16px;
+  padding: 4px 16px;
+  font-size: 20px;
+  font-weight: 600;
+  background: var(--base-bg-color-white);
+  box-shadow: 3px 3px 0px 0px var(--link-main);
+}
+
 /* ----- intro section ----- */
 
 #intro h2 {
@@ -145,27 +154,51 @@
   grid-template-areas:
     "logo name"
     "logo date";
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
-  max-width: 400px;
+  max-width: 100%;
+
+  p.work-inner-strapline {
+    font-size: 120%;
+  }
+
+  img,
+  svg {
+    grid-area: logo;
+    max-height: 95px;
+    margin-right: 16px;
+    min-width: 83px;
+  }
+  h2 {
+    grid-area: name;
+    margin: 0;
+  }
+
+  .work-section-date {
+    grid-area: date;
+    margin: 0;
+  }
+
+  @media screen and (max-width: 600px) {
+    grid-template-areas:
+      "logo"
+      "name"
+      "date";
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+
+    img,
+    svg {
+      margin: 0 auto;
+    }
+  }
 }
-p.work-inner-strapline {
-  font-size: 120%;
-}
-.work-inner-section-header img,
-.work-inner-section-header svg {
-  grid-area: logo;
-  max-height: 95px;
-  margin-right: 16px;
-  min-width: 83px;
-}
-.work-inner-section-header h2 {
-  grid-area: name;
-  margin: 0;
-}
-.work-inner-section-header .work-section-date {
-  grid-area: date;
-  margin: 0;
+
+/* AA specific edits */
+
+body.dark-mode .work-inner-section#aromatherapy svg path {
+  fill: var(--base-text-color);
 }
 
 /* twc specific edits */
@@ -201,6 +234,7 @@ form {
   padding: 30px 3vw;
   max-width: max-content;
   margin: 24px auto;
+  box-shadow: 3px 3px 0px 0px var(--link-main);
 }
 form * {
   display: block;
@@ -223,6 +257,7 @@ form input[type="submit"] {
   padding: 8px 20px;
   width: 100%;
   color: white;
+  cursor: pointer;
 }
 @media (max-width: 768px) {
   .section {
